# Adrinao-IA

./: .gitattributes  .gitignore  CREA_MODELLO_USABILE_ADRIANO.bat  README.md  STRATEGIA.md  TRAINA_TUTTO_ADRIANO.bat  adriano.bat  download_datasets.bat  pyproject.toml  train_adriano.bat  train_smoke.bat
configs/: adriano_qwen3_14b_curated.yaml  adriano_qwen3_14b_qlora.yaml  long_context_profiles.yaml
data/: README.md
data/eval/: adriano_eval_prompts.jsonl
data/prompts/: adriano_distill_prompts.jsonl
data/seed/: adriano_seed.jsonl
docs/: dataset-pipeline.md  dataset-sources-italia.md  diario-lavori.md  long-context.md  manifesto.md  roadmap.md
docs/en/: dataset-pipeline.md  long-context.md  manifesto.md  roadmap.md  strategy.md  worklog.md
scripts/: chat_adriano.py  convert_external_to_sft.py  create_local_distilled_dataset.py  create_ollama_modelfile.py  distill_from_teacher.py  download_italian_datasets.py  estimate_context_memory.py  merge_or_export.py  prepare_sft_dataset.py  setup_env.ps1  train_qlora.py  validate_jsonl.py  verify_gpu.py
