[project]
name = "adriano-model"
version = "0.1.0"
description = "QLoRA/distillation workspace for Adriano, an Italian-English Qwen-based assistant."
requires-python = ">=3.12,<3.13"
dependencies = [
  "accelerate>=1.8.0",
  "bitsandbytes>=0.46.0",
  "datasets>=3.6.0",
  "hf-transfer>=0.1.9",
  "huggingface-hub>=0.33.0",
  "openai>=1.90.0",
  "peft>=0.15.0",
  "protobuf>=5.29.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "sentencepiece>=0.2.0",
  "transformers>=4.52.0",
  "trl>=0.18.0"
]

[tool.uv]
index-strategy = "unsafe-best-match"

